<resources>
    <string name="app_name">Let\'s play</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="record_sound">record sound</string>
    <string name="stop_record">stop record</string>
    <string name="play_sound">play spound</string>
    <string name="set_image">set item image</string>
    <string name="save_setings">save settings</string>

    <string name="empty_file_name">Set beacon name</string>
    <string name="enter_beacon_name">Enter beacon name</string>
    <string name="enter_pin_code_hint">Enter pin code</string>
    <string name="pin_error">Wrong pin</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
